--- a/app/src/main/res/layout/activity_google_search.xml
+++ b/app/src/main/res/layout/activity_google_search.xml
@@ -50,4 +50,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <LinearLayout
+        android:id="@+id/emptySearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+
+        <ImageView
+            android:layout_width="@dimen/google_search_empty_results_icon_size"
+            android:layout_height="@dimen/google_search_empty_results_icon_size"
+            android:contentDescription="@string/google_search_empty_results"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/ic_sentiment_dissatisfied_black_24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/google_search_empty_results"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
