--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="all_item_padding">16dp</dimen>
 
     <dimen name="google_search_empty_results_icon_size">72dp</dimen>
+    <dimen name="google_search_padding_horizontal">16dp</dimen>
 </resources>
